# django-migrate-sql-deux

./: .all-contributorsrc  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-testing.txt  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  upgrader.yml
src/django_migrate_sql/: autodetector.py  config.py  graph.py  operations.py
src/django_migrate_sql/management/commands/: makemigrations.py
tests/: settings.py  test_config.py
tests/test_app/: apps.py  models.py  test_migrations.py  test_utils.py
tests/test_app/migrations_change/: 0001_initial.py  0002_auto_20151224_1827.py
tests/test_app/migrations_deps_delete/: 0002_auto_20160106_0947.py  0003_auto_20160108_0048.py  0004_auto_20160108_0048.py
tests/test_app/migrations_deps_update/: 0002_auto_20160106_0947.py
tests/test_app/migrations_recreate/: 0002_auto_20151224_1827.py  0003_auto_20160106_1038.py
tests/test_app2/: apps.py
tests/test_app2/migrations_deps_delete/: 0001_initial.py  0002_auto_20160108_0041.py
tests/test_app2/migrations_deps_update/: 0001_initial.py
tests/test_project/: settings.py
