[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools" ]

[project]
name = "django-migrate-sql-deux"
version = "0.4.0"
description = "Migration support for raw SQL in Django"
readme = "README.rst"
license = { text = "ISC" }
authors = [
  { name = "Bogdan Klichuk", email = "klichukb@gmail.com" },
  { name = "Bruno Alla", email = "oss@browniebroke.com" },
]
requires-python = ">=3.6"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Framework :: Django",
  "Framework :: Django :: 2.0",
  "Framework :: Django :: 2.1",
  "Framework :: Django :: 2.2",
  "Framework :: Django :: 3.0",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Software Development :: Libraries",
]

dependencies = [
  "django>=2.0,<3.1",
]
urls."Bug Tracker" = "https://github.com/browniebroke/django-migrate-sql-deux/issues"
urls.Changelog = "https://github.com/browniebroke/django-migrate-sql-deux/blob/main/CHANGELOG.md"
urls.repository = "https://github.com/browniebroke/django-migrate-sql-deux"

[dependency-groups]
dev = [
  "psycopg2-binary>=2.6.1",
  "pytest",
  "pytest-cov",
  "pytest-django",
]

[tool.ruff]
line-length = 88

lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "migrate_sql", "tests" ]

[tool.pytest.ini_options]
addopts = """\
    -v
    -Wdefault
    --cov=migrate_sql
    --cov-report=term-missing:skip-covered
    --cov-report=xml
    --ds=tests.settings
    """
#pythonpath = [ "src" ]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "@overload",
  "if TYPE_CHECKING",
  "raise NotImplementedError",
  'if __name__ == "__main__":',
]

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
show_error_codes = true
warn_unreachable = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true

[tool.semantic_release]
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [ "migrate_sql/__init__.py:__version__" ]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "chore.*",
  "ci.*",
  "Merge pull request .*",
]

[tool.semantic_release.changelog.environment]
keep_trailing_newline = true

[tool.semantic_release.branches.main]
match = "main"

[tool.semantic_release.branches.noop]
match = "(?!main$)"
prerelease = true
